[package]
name = "appkitr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objr = {git = "https://github.com/drewcrawford/objr"}
coregraphicsr = {git = "https://github.com/drewcrawford/coregraphicsr"}
bitflags = "1.3.2"
foundationr = {git = "https://github.com/drewcrawford/foundationr",features=["nsdictionary","nsarray","nsattributedstring","nsdata"]}
quartzcorer = {git = "https://github.com/drewcrawford/quartzcorer"}
coretextr = {git = "https://github.com/drewcrawford/coretextr",optional=true}
core-foundationr = {git = "https://github.com/drewcrawford/core-foundationr",optional=true}
[features]
coretext = ["coretextr"]
corefoundationr = ["core-foundationr"]